--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ShakerActivity"
+            android:name=".ShakerMainActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +25,10 @@
         <activity
             android:name=".SettingsActivity"
             android:label="设置"
-            android:parentActivityName=".ShakerActivity" />
+            android:parentActivityName=".ShakerMainActivity" />
 
         <activity
-            android:name=".TDialogActivity"
-            android:launchMode="singleInstance"
+            android:name=".TDialog"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
     </application>
